apps/oxlint/src/snapshots/fixtures__cli__tsgolint_type_error_--type-check -c config-type-check-without-type-aware.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-check -c config-type-check-without-type-aware.json
working directory: fixtures/cli/tsgolint_type_error
----------
The `--type-check` option requires type-aware linting.
Use `--type-aware --type-check` or enable `options.typeAware` in your config.
----------
CLI result: InvalidOptionTypeCheckWithoutTypeAware
----------
