apps/oxlint/src/snapshots/fixtures__cli__tsgolint_type_error_--type-check-only --fix@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-check-only --fix
working directory: fixtures/cli/tsgolint_type_error
----------
The `--type-check-only` option cannot be used with fix flags.
Remove `--fix`, `--fix-suggestions`, and `--fix-dangerously`.
----------
CLI result: InvalidOptionTypeCheckOnlyWithFix
----------
