apps/oxlint/src/snapshots/fixtures__cli__tsgolint_type_error_--type-check-only@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-check-only
working directory: fixtures/cli/tsgolint_type_error
----------

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
   `----

Found 0 warnings and 1 error.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: LintFoundErrors
----------
