apps/oxlint/src/snapshots/fixtures__cli__tsgolint_type_error_-c config-type-check-without-type-aware.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c config-type-check-without-type-aware.json
working directory: fixtures/cli/tsgolint_type_error
----------

  ! config-type-check-without-type-aware.json sets `options.typeCheck`, but does not set `options.typeAware`, so no TypeScript diagnostics are reported for its files.
  help: Set `options.typeAware` to `true` in this config.


  ! eslint(no-unused-vars): Variable 'foo' is declared but never used. Unused variables should start with a '_'.
   ,-[index.js:2:7]
 1 | "use strict";
 2 | const foo = "42";
   :       ^|^
   :        `-- 'foo' is declared here
   `----
  help: Consider removing this declaration.

  ! eslint(no-unused-vars): Variable 'foo' is declared but never used. Unused variables should start with a '_'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^|^
   :        `-- 'foo' is declared here
   `----
  help: Consider removing this declaration.

Found 2 warnings and 0 errors.
Finished in <variable>ms on 2 files with 96 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
